
res_pjsip (and many others)
------------------
 * A large number of resource modules make up the SIP stack based on pjsip.
   The chan_pjsip channel driver users these resource modules to provide
   various SIP functionality in Asterisk. The majority of configuration for
   these modules is performed in pjsip.conf. Other modules may use their
   own configuration files.

res_rtp_asterisk
------------------
 * ICE/STUN/TURN support in res_rtp_asterisk has been made optional.  To enable
   them, an Asterisk-specific version of PJSIP needs to be installed.
   Tarballs are available from https://github.com/asterisk/pjproject/tags/.

res_statsd/res_chan_stats
------------------
 * A new resource module, res_statsd, has been added, which acts as a statsd
   client. This module allows Asterisk to publish statistics to a statsd
   server. In conjunction with res_chan_stats, it will publish statistics about
   channels to the statsd server. It can be configured via res_statsd.conf.

res_xmpp
------------------
 * Device state for XMPP buddies is now available using the following format:
   XMPP/<client name>/<buddy address>
   If any resource is available the device state is considered to be not in use.
   If no resources exist or all are unavailable the device state is considered
   to be unavailable.


Scripts
------------------

Realtime/Database Scripts
------------------
 * Asterisk previously included example db schemas in the contrib/realtime/
   directory of the source tree.  This has been replaced by a set of database
   migrations using the Alembic framework.  This allows you to use alembic to
   initialize the database for you.  It will also serve as a database migration
   tool when upgrading Asterisk in the future.

   See contrib/ast-db-manage/README.md for more details.

sip_to_res_pjsip.py
-------------------
 * A new script has been added in the contrib/scripts/sip_to_res_pjsip folder.
   This python script will convert an existing sip.conf file to a